  * Added kill().
  * Added rmote support to enhances.
  * Fixed device default for rmote base graphic plot.
  * Diverted R message (warning, error, stop) to client.
  * Added wiping out password when server is down.
  * Added environment syncing.
  * Switched to LaTeX vignettes.
  * Added remote machines vignette.
  * Dropped assertthat for reactor.
  * Fixed multiline string input bug.

Release 0.3-2 (4/28/2016):
  * Minor internal cleanup.
  * Improved timer behavior.
  * Fixed s2c() bug.
  * Fixed bug that affected attaching some package namespaces (WCC).
  * Fixed remoter namespace attach bug within the server.

Release 0.3-1 (4/17/2016):
  * Added "timer" option to client.
  * Added "middleman" functionality via relay().
  * Added blurb about relays to the vignette.
  * Moved password method with masking to getPass package.
  * Integrated getPass() into client authentication.
  * Explicitly namespaced internal use of pbdZMQ functions.

Release 0.3-0 (2/17/2016):
  * Dumped log output to file.
  * Added showlog().
  * Added "q.server" argument to exit() (WCC).
  * Complete refactoring of internals.
  * Better state management/abstraction.
  * Better clarity in client/server REPL's.
  * Significant improvements to error checking in s2c() and c2s().

Release 0.2-1 (2/10/2016):
  * Made encryption/secure servers/sodium optional.
  * Added note about ssh tunneling to vignette.
  * Significantly enhanced logger.
  * Fixed C-c client bug.

Release 0.2-0 (2/3/2016):
  * Added encrypted communications via sodium.
  * Large rewrite of internal state system.
  * Vignette rewrite.
  * Added basic logger for server.
  * Disallowed privileged ports.
  * Better documentation and help.

Release 0.1-2 (2/1/2016):
  * Changed param "remote_addr" to "addr" in client().
  * Minor improvements to the repl.
  * Better error checking and handling for addresses.

Release 0.1-1 (1/30/2016):
  * Added some remote checks, address validation in client.