@@ -30,6 +30,8 @@ export(s2c)
 export(server)
 export(showlog)
 export(shutdown)
+importFrom(argon2,pw_check)
+importFrom(argon2,pw_hash)
 importFrom(getPass,getPass)
 importFrom(grDevices,as.raster)
 importFrom(grDevices,dev.cur)
