@@ -15,6 +15,7 @@
 #' @name remoter-package
 #' 
 #' @importFrom pbdZMQ zmq
+#' @importFrom argon2 pw_hash pw_check
 #' @importFrom stats runif
 #' @importFrom utils capture.output globalVariables packageVersion help str
 #' @importFrom tools file_path_as_absolute Rd2txt
